# 2024-07-01

./: .gitmodules
exercises/1/: CMakeLists.txt  project-config.h.in
exercises/1/cmake/: external-dependencies.cmake  my_add_library.cmake  settings.cmake
exercises/1/firmware/: 2024-06-20.conf  2024-07-03.conf  CMakeLists.txt  boiling-pot.cpp  data-logger-deeply-embedded.cpp  data-logger.cpp
exercises/1/tests/: CMakeLists.txt  sensor-const-suite.cpp  sensor-random-suite.cpp
exercises/1/toolcase/base/: CMakeLists.txt
exercises/1/toolcase/base/src/: sysfs-switch.cpp
exercises/1/toolcase/boiling-pot/: CMakeLists.txt
exercises/1/toolcase/data-logger/: CMakeLists.txt
livecoding/: hello-world  language.cmake  language.py  script2.cmake
livecoding/hello-project/: CMakeLists.txt
livecoding/hello-project/libhello/: CMakeLists.txt
